fixing z-index navbar

--- a/public/css/template.css
+++ b/public/css/template.css
@@ -184,6 +184,10 @@
     z-index: 1;
 }
 
+.z-index-3{
+    z-index: 3;
+}
+
 .width-content{
     width: fit-content;
 }
